[package]
name = "ron-demo"
version = "0.1.0"
authors = ["Chris Ha <chunghha@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
better-panic = "0.2"
log = "0.4"
plotlib = "0.5"
pretty_env_logger = "0.4"
ron = "0.6"
serde = "1.0"
structopt = "0.3"

[[bin]]
name = "decode"
path = "src/bin/decode.rs"

[[bin]]
name = "encode"
path = "src/bin/encode.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"
